website/tests/snapshots/lang/variables.exp
=== block 1 ===
Error ------------------------------------------------------------------------------ -:8:1

Cannot reassign constant `constVariable` [1]. [reassign-const]

   -:8:1
   8| constVariable = 2; // Error!
      ^^^^^^^^^^^^^

References:
   -:4:7
   4| const constVariable = 1;
            ^^^^^^^^^^^^^ [1]


Found 1 error

=== block 2 ===
No errors!

=== block 3 ===
Error ------------------------------------------------------------------------------ -:4:7

Cannot assign `'3'` to `foo` because string [1] is incompatible with number [2]. [incompatible-type]

   -:4:7
   4| foo = '3'; // Error!
            ^^^ [1]

References:
   -:2:10
   2| let foo: number = 1;
               ^^^^^^ [2]


Found 1 error

=== block 4 ===
Error ---------------------------------------------------------------------------- -:31:11

Cannot assign `'Our new pr...'` to `product` because string [1] is incompatible with number [2]. [incompatible-type]

All writes to `product` must be compatible with the type of its initializer [3]. Add an annotation to `product` [3] if a
different type is desired.

   -:31:11
   31| product = 'Our new product is...'; // Error
                 ^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   -:10:15
   10| let product = Math.sqrt(x) + y;
                     ^^^^^^^^^^^^^^^^ [2]
   -:10:5
   10| let product = Math.sqrt(x) + y;
           ^^^^^^^ [3]

Error ---------------------------------------------------------------------------- -:32:13

Cannot assign function to `Component` because in the first parameter: property `extra_prop` is missing in object
type [1] but exists in object type [2]. [incompatible-type]

All writes to `Component` must be compatible with the type of its initializer [3]. Add an annotation to `Component` [3]
if a different type is desired.

   -:32:13
                   v---------------------------------------------
   32| Component = ({prop}: OtherProps): React.Node => { // Error
   33|   return <div />;
   34| };
       ^

References:
   -:13:26
   13| let Component = ({prop}: Props): React.Node => {
                                ^^^^^ [1]
   -:32:22
   32| Component = ({prop}: OtherProps): React.Node => { // Error
                            ^^^^^^^^^^ [2]
   -:13:5
   13| let Component = ({prop}: Props): React.Node => {
           ^^^^^^^^^ [3]


Found 2 errors

=== block 5 ===
Error ----------------------------------------------------------------------------- -:4:22

Cannot assign `42` to `topLevelAssigned` because number [1] is incompatible with string [2]. [incompatible-type]

All writes to `topLevelAssigned` must be compatible with the type of its initial assignment [3]. Add an annotation to
`topLevelAssigned` [4] if a different type is desired.

   -:4:22
   4|   topLevelAssigned = 42; // Error: `topLevelAssigned` has type `string`
                           ^^ [1]

References:
   -:6:20
   6| topLevelAssigned = 'Hello world'; // This write determines the var's type
                         ^^^^^^^^^^^^^ [2]
   -:6:1
   6| topLevelAssigned = 'Hello world'; // This write determines the var's type
      ^^^^^^^^^^^^^^^^ [3]
   -:2:5
   2| let topLevelAssigned;
          ^^^^^^^^^^^^^^^^ [4]

Error ----------------------------------------------------------------------------- -:7:20

Cannot assign `true` to `topLevelAssigned` because boolean [1] is incompatible with string [2]. [incompatible-type]

All writes to `topLevelAssigned` must be compatible with the type of its initial assignment [3]. Add an annotation to
`topLevelAssigned` [4] if a different type is desired.

   -:7:20
   7| topLevelAssigned = true; // Error: `topLevelAssigned` has type `string`
                         ^^^^ [1]

References:
   -:6:20
   6| topLevelAssigned = 'Hello world'; // This write determines the var's type
                         ^^^^^^^^^^^^^ [2]
   -:6:1
   6| topLevelAssigned = 'Hello world'; // This write determines the var's type
      ^^^^^^^^^^^^^^^^ [3]
   -:2:5
   2| let topLevelAssigned;
          ^^^^^^^^^^^^^^^^ [4]


Found 2 errors

=== block 6 ===
Error ---------------------------------------------------------------------------- -:11:20

Cannot assign `false` to `myNumberOrString` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

All writes to `myNumberOrString` must be compatible with the type of one of its initial assignments [4], [5]. Add an
annotation to `myNumberOrString` [6] if a different type is desired.

   -:11:20
   11| myNumberOrString = false; // Error: `myNumberOrString` has type `number | string`
                          ^^^^^ [1]

References:
   -:5:22
    5|   myNumberOrString = 42; // Determines type
                            ^^ [2]
   -:7:22
    7|   myNumberOrString = 'Hello world'; // Determines type
                            ^^^^^^^^^^^^^ [3]
   -:5:3
    5|   myNumberOrString = 42; // Determines type
         ^^^^^^^^^^^^^^^^ [4]
   -:7:3
    7|   myNumberOrString = 'Hello world'; // Determines type
         ^^^^^^^^^^^^^^^^ [5]
   -:2:5
    2| let myNumberOrString;
           ^^^^^^^^^^^^^^^^ [6]


Found 1 error

=== block 7 ===
Error ----------------------------------------------------------------------------- -:7:19

Cannot call `oneBranchAssigned.toUpperCase` because property `toUpperCase` is missing in possibly uninitialized
variable [1]. [incompatible-use]

   -:7:19
   7| oneBranchAssigned.toUpperCase(); // Error: `oneBranchAssigned` may be uninitialized
                        ^^^^^^^^^^^

References:
   -:2:5
   2| let oneBranchAssigned;
          ^^^^^^^^^^^^^^^^^ [1]

Error ----------------------------------------------------------------------------- -:8:21

Cannot assign `42` to `oneBranchAssigned` because number [1] is incompatible with string [2]. [incompatible-type]

All writes to `oneBranchAssigned` must be compatible with the type of its initial assignment [3]. Add an annotation to
`oneBranchAssigned` [4] if a different type is desired.

   -:8:21
   8| oneBranchAssigned = 42; // Error: `oneBranchAssigned` has type `string`
                          ^^ [1]

References:
   -:5:23
   5|   oneBranchAssigned = 'Hello world!';
                            ^^^^^^^^^^^^^^ [2]
   -:5:3
   5|   oneBranchAssigned = 'Hello world!';
        ^^^^^^^^^^^^^^^^^ [3]
   -:2:5
   2| let oneBranchAssigned;
          ^^^^^^^^^^^^^^^^^ [4]


Found 2 errors

=== block 8 ===
No errors!

=== block 9 ===
No errors!
